parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl
   5        | decls stmt

   6  fdecl : typ ID LPAREN formals_opt RPAREN EOL fbody END EOL

   7  fbody :
   8        | fbody vdecl
   9        | fbody stmt

  10  formals_opt :
  11              | formals_list

  12  formals_list : typ ID
  13               | formals_list COMMA typ ID

  14  typ : INT
  15      | FLOAT
  16      | BOOL
  17      | CHAR
  18      | STRING
  19      | VOID
  20      | LIST LT typ GT
  21      | LPAREN typ RPAREN
  22      | typ ARROW typ

  23  vdecl : typ ID ASSIGN expr EOL

  24  stmt_list :
  25            | stmt_list stmt

  26  stmt : EOL
  27       | expr EOL
  28       | RETURN expr_opt EOL
  29       | IF internal_if EOL
  30       | FOR expr IN expr DO stmt_list END EOL
  31       | WHILE expr DO stmt_list END EOL
  32       | BREAK EOL
  33       | CONTINUE EOL
  34       | vdecl EOL

  35  internal_if : expr DO EOL stmt_list elif_list else_list END

  36  elif_list :
  37            | elif elif_list

  38  elif : ELSEIF expr EOL stmt_list

  39  else_list :
  40            | ELSE EOL stmt_list

  41  expr_opt :
  42           | expr

  43  expr : LITERAL
  44       | FLIT
  45       | BLIT
  46       | CLIT
  47       | SLIT
  48       | LSQUARE list_literal RSQUARE
  49       | expr PLUS expr
  50       | expr MINUS expr
  51       | expr TIMES expr
  52       | expr DIVIDE expr
  53       | expr EXP expr
  54       | expr EQ expr
  55       | expr NEQ expr
  56       | expr LT expr
  57       | expr LEQ expr
  58       | expr GT expr
  59       | expr GEQ expr
  60       | expr AND expr
  61       | expr OR expr
  62       | expr MOD expr
  63       | expr RANGE expr
  64       | MINUS expr
  65       | NOT expr
  66       | LPAREN expr RPAREN
  67       | ID ASSIGN expr
  68       | ID ADDASN expr
  69       | ID SUBASN expr
  70       | ID MULASN expr
  71       | ID DIVASN expr
  72       | ID MODASN expr
  73       | ID LPAREN args_opt RPAREN
  74       | expr LSQUARE expr RSQUARE
  75       | expr LSQUARE expr COLON expr RSQUARE

  76  list_literal :
  77               | expr
  78               | list_literal COMMA expr

  79  args_opt :
  80           | args_list

  81  args_list : expr
  82            | args_list COMMA expr

  83  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (83)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (83)

	.  reduce 83


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)
	decls : decls . stmt  (5)

	LPAREN  shift 5
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	IF  shift 9
	FOR  shift 10
	WHILE  shift 11
	BREAK  shift 12
	CONTINUE  shift 13
	RETURN  shift 14
	INT  shift 15
	FLOAT  shift 16
	BOOL  shift 17
	STRING  shift 18
	CHAR  shift 19
	VOID  shift 20
	LIST  shift 21
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	EOL  shift 28
	EOF  shift 29
	.  error

	vdecl  goto 30
	fdecl  goto 31
	stmt  goto 32
	typ  goto 33
	expr  goto 34


state 5
	typ : LPAREN . typ RPAREN  (21)
	expr : LPAREN . expr RPAREN  (66)

	LPAREN  shift 5
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	INT  shift 15
	FLOAT  shift 16
	BOOL  shift 17
	STRING  shift 18
	CHAR  shift 19
	VOID  shift 20
	LIST  shift 21
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	typ  goto 35
	expr  goto 36


state 6
	expr : LSQUARE . list_literal RSQUARE  (48)
	list_literal : .  (76)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	RSQUARE  reduce 76
	COMMA  reduce 76

	expr  goto 38
	list_literal  goto 39


state 7
	expr : MINUS . expr  (64)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 40


state 8
	expr : NOT . expr  (65)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 41


state 9
	stmt : IF . internal_if EOL  (29)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 42
	internal_if  goto 43


state 10
	stmt : FOR . expr IN expr DO stmt_list END EOL  (30)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 44


state 11
	stmt : WHILE . expr DO stmt_list END EOL  (31)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 45


state 12
	stmt : BREAK . EOL  (32)

	EOL  shift 46
	.  error


state 13
	stmt : CONTINUE . EOL  (33)

	EOL  shift 47
	.  error


state 14
	stmt : RETURN . expr_opt EOL  (28)
	expr_opt : .  (41)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	EOL  reduce 41

	expr  goto 48
	expr_opt  goto 49


state 15
	typ : INT .  (14)

	.  reduce 14


state 16
	typ : FLOAT .  (15)

	.  reduce 15


state 17
	typ : BOOL .  (16)

	.  reduce 16


state 18
	typ : STRING .  (18)

	.  reduce 18


state 19
	typ : CHAR .  (17)

	.  reduce 17


state 20
	typ : VOID .  (19)

	.  reduce 19


state 21
	typ : LIST . LT typ GT  (20)

	LT  shift 50
	.  error


state 22
	expr : BLIT .  (45)

	.  reduce 45


state 23
	expr : LITERAL .  (43)

	.  reduce 43


state 24
	expr : FLIT .  (44)

	.  reduce 44


state 25
	expr : ID . ASSIGN expr  (67)
	expr : ID . ADDASN expr  (68)
	expr : ID . SUBASN expr  (69)
	expr : ID . MULASN expr  (70)
	expr : ID . DIVASN expr  (71)
	expr : ID . MODASN expr  (72)
	expr : ID . LPAREN args_opt RPAREN  (73)

	LPAREN  shift 51
	ADDASN  shift 52
	SUBASN  shift 53
	MULASN  shift 54
	DIVASN  shift 55
	MODASN  shift 56
	ASSIGN  shift 57
	.  error


state 26
	expr : CLIT .  (46)

	.  reduce 46


state 27
	expr : SLIT .  (47)

	.  reduce 47


state 28
	stmt : EOL .  (26)

	.  reduce 26


state 29
	program : decls EOF .  (1)

	.  reduce 1


30: shift/reduce conflict (shift 58, reduce 3) on EOL
state 30
	decls : decls vdecl .  (3)
	stmt : vdecl . EOL  (34)

	EOL  shift 58
	LPAREN  reduce 3
	LSQUARE  reduce 3
	MINUS  reduce 3
	NOT  reduce 3
	IF  reduce 3
	FOR  reduce 3
	WHILE  reduce 3
	BREAK  reduce 3
	CONTINUE  reduce 3
	RETURN  reduce 3
	INT  reduce 3
	FLOAT  reduce 3
	BOOL  reduce 3
	STRING  reduce 3
	CHAR  reduce 3
	VOID  reduce 3
	LIST  reduce 3
	BLIT  reduce 3
	LITERAL  reduce 3
	FLIT  reduce 3
	ID  reduce 3
	CLIT  reduce 3
	SLIT  reduce 3
	EOF  reduce 3


state 31
	decls : decls fdecl .  (4)

	.  reduce 4


state 32
	decls : decls stmt .  (5)

	.  reduce 5


state 33
	fdecl : typ . ID LPAREN formals_opt RPAREN EOL fbody END EOL  (6)
	typ : typ . ARROW typ  (22)
	vdecl : typ . ID ASSIGN expr EOL  (23)

	ARROW  shift 59
	ID  shift 60
	.  error


state 34
	stmt : expr . EOL  (27)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)

	LSQUARE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIVIDE  shift 65
	MOD  shift 66
	EXP  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	RANGE  shift 74
	AND  shift 75
	OR  shift 76
	EOL  shift 77
	.  error


state 35
	typ : LPAREN typ . RPAREN  (21)
	typ : typ . ARROW typ  (22)

	RPAREN  shift 78
	ARROW  shift 59
	.  error


state 36
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : LPAREN expr . RPAREN  (66)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)

	RPAREN  shift 79
	LSQUARE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIVIDE  shift 65
	MOD  shift 66
	EXP  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	RANGE  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 37
	expr : LPAREN . expr RPAREN  (66)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 36


state 38
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)
	list_literal : expr .  (77)

	LSQUARE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIVIDE  shift 65
	MOD  shift 66
	EXP  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	RANGE  shift 74
	AND  shift 75
	OR  shift 76
	RSQUARE  reduce 77
	COMMA  reduce 77


state 39
	expr : LSQUARE list_literal . RSQUARE  (48)
	list_literal : list_literal . COMMA expr  (78)

	RSQUARE  shift 80
	COMMA  shift 81
	.  error


40: shift/reduce conflict (shift 61, reduce 64) on LSQUARE
40: shift/reduce conflict (shift 74, reduce 64) on RANGE
state 40
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : MINUS expr .  (64)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)

	LSQUARE  shift 61
	RANGE  shift 74
	RPAREN  reduce 64
	RSQUARE  reduce 64
	COMMA  reduce 64
	COLON  reduce 64
	PLUS  reduce 64
	MINUS  reduce 64
	TIMES  reduce 64
	DIVIDE  reduce 64
	MOD  reduce 64
	EXP  reduce 64
	EQ  reduce 64
	NEQ  reduce 64
	LT  reduce 64
	LEQ  reduce 64
	GT  reduce 64
	GEQ  reduce 64
	AND  reduce 64
	OR  reduce 64
	IN  reduce 64
	DO  reduce 64
	EOL  reduce 64


41: shift/reduce conflict (shift 61, reduce 65) on LSQUARE
41: shift/reduce conflict (shift 74, reduce 65) on RANGE
state 41
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : NOT expr .  (65)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)

	LSQUARE  shift 61
	RANGE  shift 74
	RPAREN  reduce 65
	RSQUARE  reduce 65
	COMMA  reduce 65
	COLON  reduce 65
	PLUS  reduce 65
	MINUS  reduce 65
	TIMES  reduce 65
	DIVIDE  reduce 65
	MOD  reduce 65
	EXP  reduce 65
	EQ  reduce 65
	NEQ  reduce 65
	LT  reduce 65
	LEQ  reduce 65
	GT  reduce 65
	GEQ  reduce 65
	AND  reduce 65
	OR  reduce 65
	IN  reduce 65
	DO  reduce 65
	EOL  reduce 65


state 42
	internal_if : expr . DO EOL stmt_list elif_list else_list END  (35)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)

	LSQUARE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIVIDE  shift 65
	MOD  shift 66
	EXP  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	RANGE  shift 74
	AND  shift 75
	OR  shift 76
	DO  shift 82
	.  error


state 43
	stmt : IF internal_if . EOL  (29)

	EOL  shift 83
	.  error


state 44
	stmt : FOR expr . IN expr DO stmt_list END EOL  (30)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)

	LSQUARE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIVIDE  shift 65
	MOD  shift 66
	EXP  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	RANGE  shift 74
	AND  shift 75
	OR  shift 76
	IN  shift 84
	.  error


state 45
	stmt : WHILE expr . DO stmt_list END EOL  (31)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)

	LSQUARE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIVIDE  shift 65
	MOD  shift 66
	EXP  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	RANGE  shift 74
	AND  shift 75
	OR  shift 76
	DO  shift 85
	.  error


state 46
	stmt : BREAK EOL .  (32)

	.  reduce 32


state 47
	stmt : CONTINUE EOL .  (33)

	.  reduce 33


state 48
	expr_opt : expr .  (42)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . LT expr  (56)
	expr : expr . LEQ expr  (57)
	expr : expr . GT expr  (58)
	expr : expr . GEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . MOD expr  (62)
	expr : expr . RANGE expr  (63)
	expr : expr . LSQUARE expr RSQUARE  (74)
	expr : expr . LSQUARE expr COLON expr RSQUARE  (75)

	LSQUARE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIVIDE  shift 65
	MOD  shift 66
	EXP  shift 67
	EQ  shift 68
	NEQ  shift 69
	LT  shift 70
	LEQ  shift 71
	GT  shift 72
	GEQ  shift 73
	RANGE  shift 74
	AND  shift 75
	OR  shift 76
	EOL  reduce 42


state 49
	stmt : RETURN expr_opt . EOL  (28)

	EOL  shift 86
	.  error


state 50
	typ : LIST LT . typ GT  (20)

	LPAREN  shift 87
	INT  shift 15
	FLOAT  shift 16
	BOOL  shift 17
	STRING  shift 18
	CHAR  shift 19
	VOID  shift 20
	LIST  shift 21
	.  error

	typ  goto 88


state 51
	expr : ID LPAREN . args_opt RPAREN  (73)
	args_opt : .  (79)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	RPAREN  reduce 79

	expr  goto 89
	args_opt  goto 90
	args_list  goto 91


state 52
	expr : ID ADDASN . expr  (68)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 92


state 53
	expr : ID SUBASN . expr  (69)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 93


state 54
	expr : ID MULASN . expr  (70)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 94


state 55
	expr : ID DIVASN . expr  (71)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 95


state 56
	expr : ID MODASN . expr  (72)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 96


state 57
	expr : ID ASSIGN . expr  (67)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 97


state 58
	stmt : vdecl EOL .  (34)

	.  reduce 34


state 59
	typ : typ ARROW . typ  (22)

	LPAREN  shift 87
	INT  shift 15
	FLOAT  shift 16
	BOOL  shift 17
	STRING  shift 18
	CHAR  shift 19
	VOID  shift 20
	LIST  shift 21
	.  error

	typ  goto 98


state 60
	fdecl : typ ID . LPAREN formals_opt RPAREN EOL fbody END EOL  (6)
	vdecl : typ ID . ASSIGN expr EOL  (23)

	LPAREN  shift 99
	ASSIGN  shift 100
	.  error


state 61
	expr : expr LSQUARE . expr RSQUARE  (74)
	expr : expr LSQUARE . expr COLON expr RSQUARE  (75)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 101


state 62
	expr : expr PLUS . expr  (49)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 102


state 63
	expr : expr MINUS . expr  (50)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 103


state 64
	expr : expr TIMES . expr  (51)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 104


state 65
	expr : expr DIVIDE . expr  (52)

	LPAREN  shift 37
	LSQUARE  shift 6
	MINUS  shift 7
	NOT  shift 8
	BLIT  shift 22
	LITERAL  shift 23
	FLIT  shift 24
	ID  shift 25
	CLIT  shift 26
	SLIT  shift 27
	.  error

	expr  goto 105


state 66
	expr : expr MOD . expr  (62)
